--- a/package.json
+++ b/package.json
@@ -27,7 +27,17 @@
     "arrowParens": "avoid"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-no-relative-import-paths": "^1.5.3",
+    "eslint-plugin-promise": "^6.1.1",
     "gh-pages": "^6.1.1",
+    "prettier": "^3.2.5",
     "riot": "^9.1.3",
     "rollup-plugin-riot": "^9.0.2",
     "typescript": "^5.2.2",
