config(prettier): parse riot as html

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "keywords": [
     "portfolio"
@@ -17,7 +17,7 @@
     "deployer": "pnpm build && gh-pages -b prod -m 'build(prod): deployment' -d dist",
     "lint": "eslint src --ext .ts,.tsx --report-unused-disable-directives",
     "style": "stylelint 'src/**/*.{css,pcss,scss,sass,less,styl}'",
-    "pretty": "prettier '{src,__{tests,mocks,snapshots}__}/**/*.{ts,tsx}' --write",
+    "pretty": "prettier '{src,__{tests,mocks,snapshots}__}/**/*.{ts,tsx,riot}' --write",
     "format": "pnpm lint --fix && pnpm style --fix && pnpm pretty"
   },
   "stylelint": {
@@ -31,7 +31,15 @@
     "jsxSingleQuote": true,
     "bracketSameLine": true,
     "trailingComma": "none",
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "overrides": [
+      {
+        "files": "*.riot",
+        "options": {
+          "parser": "html"
+        }
+      }
+    ]
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
@@ -39,8 +47,8 @@
     "stylus": "^0.62.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -54,7 +62,7 @@
     "stylelint": "^16.2.1",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-stylus": "^1.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.3"
   }
 }
