--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "keywords": [
     "portfolio"
@@ -32,6 +32,7 @@
     "bracketSameLine": true,
     "trailingComma": "none",
     "arrowParens": "avoid",
+    "experimentalTernaries": true,
     "overrides": [
       {
         "files": "*.riot",
@@ -43,13 +44,13 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "riot": "^9.1.3",
+    "riot": "^9.1.4",
     "stylus": "^0.62.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
@@ -63,6 +64,6 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-stylus": "^1.0.0",
     "typescript": "^5.3.3",
-    "vite": "^5.1.3"
+    "vite": "^5.1.4"
   }
 }
