--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.5",
+  "version": "0.0.6",
   "type": "module",
   "keywords": [
     "portfolio"
@@ -16,15 +16,8 @@
     "preview": "vite preview",
     "deployer": "pnpm build && gh-pages -b prod -m 'build(prod): deployment' -d dist",
     "lint": "eslint src --ext .ts,.tsx --report-unused-disable-directives",
-    "style": "stylelint 'src/**/*.{css,pcss,scss,sass,less,styl}'",
     "pretty": "prettier '{src,__{tests,mocks,snapshots}__}/**/*.{ts,tsx,riot}' --write",
-    "format": "pnpm lint --fix && pnpm style --fix && pnpm pretty"
-  },
-  "stylelint": {
-    "extends": [
-      "stylelint-config-standard",
-      "stylelint-stylus/standard"
-    ]
+    "format": "pnpm lint --fix && pnpm pretty"
   },
   "prettier": {
     "singleQuote": true,
@@ -44,8 +37,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "riot": "^9.1.4",
-    "stylus": "^0.62.0"
+    "riot": "^9.1.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.0",
@@ -60,9 +52,6 @@
     "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
     "rollup-plugin-riot": "^9.0.2",
-    "stylelint": "^16.2.1",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-stylus": "^1.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.4"
   }
