--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "skipLibCheck": true,
     "composite": true,
     // Bundler
-    "types": ["vite/client"],
+    "types": ["vite/client", "@modyfi/vite-plugin-yaml/modules"],
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "allowSyntheticDefaultImports": true,
