--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
 {
   "root": true,
-  "env": {
-    "browser": true,
-    "es2022": true
-  },
+  "env": { "browser": true, "es2024": true },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/strict-type-checked",
@@ -15,13 +12,8 @@
     "prettier"
   ],
   "settings": {
-    "import/parsers": {
-      "@typescript-eslint/parser": [".ts", ".tsx"]
-    },
-    "import/resolver": {
-      "typescript": true,
-      "node": true
-    }
+    "import/parsers": { "@typescript-eslint/parser": [".ts", ".tsx"] },
+    "import/resolver": { "typescript": true, "node": true }
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
