--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "keywords": [
     "portfolio"
@@ -15,7 +15,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "deployer": "pnpm build && gh-pages -b prod -m 'build(prod): deployment' -d dist",
-    "lint": "eslint src --ext ts --report-unused-disable-directives",
+    "lint": "eslint src --flag unstable_ts_config",
     "pretty": "prettier 'src/**/*.{ts,riot}' --write",
     "format": "pnpm lint --fix && pnpm pretty"
   },
@@ -36,24 +36,24 @@
     ]
   },
   "dependencies": {
-    "modern-normalize": "^2.0.0",
-    "riot": "^9.1.4"
+    "modern-normalize": "^3.0.1",
+    "riot": "^9.4.0"
   },
   "devDependencies": {
     "@modyfi/vite-plugin-yaml": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-no-relative-import-paths": "^1.5.3",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.10.3",
+    "eslint-plugin-no-relative-import-paths": "^1.5.5",
+    "eslint-plugin-promise": "^7.1.0",
     "gh-pages": "^6.1.1",
-    "prettier": "^3.2.5",
+    "jiti": "^2.3.3",
+    "prettier": "^3.3.3",
     "rollup-plugin-riot": "^9.0.2",
-    "typescript": "^5.4.2",
-    "vite": "^5.2.0"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.1",
+    "vite": "^5.4.8"
   }
 }
