--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "1.0.4",
+  "version": "1.0.5",
   "type": "module",
   "keywords": [
     "portfolio"
@@ -12,7 +12,7 @@
   "author": "Eldar Pashazade <eldarlrd@pm.me> (https://eldarlrd.github.io)",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
     "preview": "vite preview",
     "deployer": "pnpm build && gh-pages -b prod -m 'build(prod): deployment' -d dist",
     "lint": "eslint src --flag unstable_ts_config",
@@ -37,23 +37,23 @@
   },
   "dependencies": {
     "modern-normalize": "^3.0.1",
-    "riot": "^9.4.0"
+    "riot": "^9.4.4"
   },
   "devDependencies": {
     "@modyfi/vite-plugin-yaml": "^1.1.0",
-    "eslint": "^9.12.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.10.3",
+    "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.5",
-    "eslint-plugin-promise": "^7.1.0",
-    "gh-pages": "^6.1.1",
-    "jiti": "^2.3.3",
-    "prettier": "^3.3.3",
+    "eslint-plugin-promise": "^7.2.1",
+    "gh-pages": "^6.2.0",
+    "jiti": "^2.4.2",
+    "prettier": "^3.4.2",
     "rollup-plugin-riot": "^9.0.2",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.1",
-    "vite": "^5.4.8"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2",
+    "vite": "^6.0.6"
   }
 }
