--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "tsBuildInfoFile": "node_modules/.tmp/tsconfig.tsbuildinfo",
     "skipLibCheck": true,
     "composite": true,
     // Bundler
