--- a/src/data/projects.yaml
+++ b/src/data/projects.yaml
@@ -22,11 +22,11 @@
   banner: 544421143/ece3e97a-7fce-4b91-9127-38fc6c135504
   stack:
   - react-original
+  - reactrouter-plain
   - javascript-plain
   - typescript-plain
-  description: A front end interface that comprises a component library,
-    a syntax highlighter, and an intersection observer for a dynamic table
-    of contents to display pure and interactive algorithms.
+  description: A frontend interface that comprises a component library,
+    a syntax highlighter, and routing to display pure and interactive algorithms.
 
 - name: TS Battleship
   banner: 728235696/64c12b80-542b-4439-9b84-7366203702ec
@@ -51,7 +51,7 @@
     and focus traps for accessibility and keyboard crawl.
 
 - name: Weather App
-  banner: 719001057/dc280644-fb4f-42a9-a2c7-5af7ad160ab6
+  banner: 719001057/2b5d46d6-a1c7-4602-a24b-cc37f9a9cca2
   stack:
   - html5-plain
   - css3-plain
