--- a/package.json
+++ b/package.json
@@ -38,25 +38,28 @@
   },
   "dependencies": {
     "modern-normalize": "^3.0.1",
-    "riot": "^9.4.7"
+    "riot": "^10.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@modyfi/vite-plugin-yaml": "^1.1.1",
-    "@types/node": "^22.15.18",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.3.4",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.18.0",
+    "@riotjs/compiler": "^10.0.0",
+    "@types/node": "^24.3.0",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^17.21.3",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-promise": "^7.2.1",
     "gh-pages": "^6.3.0",
-    "jiti": "^2.4.2",
-    "knip": "^5.55.1",
-    "prettier": "^3.5.3",
-    "rollup-plugin-riot": "^9.0.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5"
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
+    "knip": "^5.63.0",
+    "prettier": "^3.6.2",
+    "rollup-plugin-riot": "^10.0.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0",
+    "vite": "^7.1.3"
   }
 }
