--- a/src/data/projects.yaml
+++ b/src/data/projects.yaml
@@ -9,14 +9,13 @@
     that generates a PDF for download. Made with React & Zustand.
 
 - name: Fifteen Puzzle
-  banner: 641330748/537026e9-d167-43d6-9b9a-5879e88a6c2e
+  banner: 641330748/2064e49c-a90f-4d47-8b9b-c54e08a2e562
   stack:
   - tailwindcss-original
-  - postcss-original
   - typescript-plain
   description: A popular puzzle game now available as an installable
     PWA with a timer, a move counter, and a highlight for
-    correct placements made with Arrow and Tailwind CSS.
+    correct placements made with TypeScript and Tailwind CSS.
 
 - name: JS Algorithms
   banner: 544421143/21476254-13b6-4c63-b06f-bb9ed031ecd3
