--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   ],
   "description": "eldarlrd's portfolio",
   "repository": "github:eldarlrd/portfolio",
-  "homepage": "https://eldarlrd.github.io/portfolio",
-  "author": "Eldar Pashazade <eldarlrd@pm.me> (https://eldarlrd.github.io)",
+  "homepage": "https://eldarlrd.is-a.dev/portfolio",
+  "author": "Eldar Pashazade <eldarlrd@pm.me> (https://eldarlrd.is-a.dev)",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "bundle": "tsc -b && vite build",
     "preview": "vite preview",
-    "deployer": "pnpm build && gh-pages -b prod -m 'build(prod): deployment' -d dist",
+    "deployer": "pnpm bundle && gh-pages -b prod -m 'build(prod): deployment' -d dist",
     "lint": "eslint src",
     "pretty": "prettier 'src/**/*.{ts,riot}' --write",
     "format": "pnpm lint --fix && pnpm pretty",
@@ -41,25 +41,25 @@
     "riot": "^10.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.34.0",
+    "@eslint/js": "^9.37.0",
     "@modyfi/vite-plugin-yaml": "^1.1.1",
     "@riotjs/compiler": "^10.0.1",
-    "@types/node": "^24.3.0",
-    "eslint": "^9.34.0",
+    "@types/node": "^24.7.2",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-n": "^17.21.3",
+    "eslint-plugin-n": "^17.23.1",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-promise": "^7.2.1",
     "gh-pages": "^6.3.0",
-    "globals": "^16.3.0",
-    "jiti": "^2.5.1",
-    "knip": "^5.63.1",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
+    "knip": "^5.65.0",
     "prettier": "^3.6.2",
     "rollup-plugin-riot": "^10.0.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.42.0",
-    "vite": "^7.1.4"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "vite": "^7.1.9"
   }
 }
