--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext", "DOM"],
     "tsBuildInfoFile": "node_modules/.tmp/tsconfig.tsbuildinfo",
     "skipLibCheck": true,
     "composite": true,
